# test-issue-tracker

./: generate_index.py  improved_renderer.py  pyproject.toml  render_templates.py  simple_json_renderer.py  simple_renderer.py  template-editor-prompt.md  template-instantiation-issues.md  template-instantiation.prompt.md  ui_examples_index.html
.codespeak/: codespeak_state.json  current_run.json  external_apis.json  last_checkpoint_in_user_area.json  last_run.json  last_successful_checkpoint.json  methods_to_test.json  sha_to_checkpoint.json  spec.processed.md
bugger/: asgi.py  settings.py  urls.py  wsgi.py
docs/: editor.js  index.html
docs/ui_examples_new/: README.md  mock_urls.py  template_renderer.py
issues/: admin.py  apps.py  forms.py  integrations.py  middleware.py  models.py  signals.py  urls.py  views.py
issues/fixtures/: initial_statuses.json
issues/migrations/: 0001_initial.py  0002_tag_issue_tags.py  0003_issue_slack_thread_ts.py  0004_issue_deleted_at_issueedithistory.py
spec/: main.cs.md
src/: __init__.py
src/external_apis/: __init__.py  validate_configuration.py
template-editor/: README.md  editor.js  pyproject.toml  requirements.txt  server.py  start.py  template_renderer.py  urls.py
templates/: base.html
tests/: test_commands_signals.py  test_endpoints.py  test_external_apis.py  test_forms.py  test_middleware_utils.py  test_models.py  test_settings.py
ui_examples/: README.md  state_descriptions.json
ui_examples_new/: django_template_renderer.py  state_descriptions.json  template_renderer.py
users/: apps.py  models.py
(+130 files in other folders)
